Force background-size contain with !important to prevent overrides

--- a/css/main.css
+++ b/css/main.css
@@ -394,9 +394,9 @@ a:hover {
     height: 100%;
     opacity: 0;
     transition: opacity 1s ease-in-out;
-    background-size: contain;
-    background-position: center;
-    background-repeat: no-repeat;
+    background-size: contain !important;
+    background-position: center !important;
+    background-repeat: no-repeat !important;
 }
 
 .carousel-slide.active {
