--- a/css/checkout-modern.css
+++ b/css/checkout-modern.css
@@ -104,7 +104,7 @@
   grid-template-columns: 1fr 350px;
   gap: 2rem;
   width: 100%;
-  justify-items: stretch;
+  align-items: start;
 }
 
 .checkout-left {
